Fix: Ensure no scrollbars in form actions area

--- a/app/assets/stylesheets/design/search/_advanced.scss
+++ b/app/assets/stylesheets/design/search/_advanced.scss
@@ -329,7 +329,6 @@
 
   li {
     display: inline-block;
-    height: 100%;
   }
 
   .button { background: none; }
